2002-06-10  Jody Goldberg <jody@gnome.org>

	* accessibility-keyboard.c : tweak the layout as requested and adjust
	  the max slowkey delay to 500 to avoid losing the keyboard due to some
	  sort of an X problem.

2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

Sun May 26 11:44:41 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-accessibility-keyboard-properties.c (main): use APPID
	instead of argv[0]

2002-05-08  Jody Goldberg <jody@gnome.org>

	* gnome-accessibility-keyboard-properties.c (dialog_response) : fix
	  path to help.

2002-04-24  Jody Goldberg <jody@gnome.org>

	* accessibility-keyboard.c : adjust the defaults.

2002-04-18  Jody Goldberg <jody@gnome.org>

	* accessibility-keyboard.c (setup_accessX_dialog) : Use 'clicked'
	  rather than 'activated' for the file sel.

2002-04-10  Jody Goldberg <jody@gnome.org>

	* gnome-accessibility-keyboard-properties.glade2 (</) : slim down the
	  tooltips.

Wed Apr 10 18:02:29 2002  Jonathan Blandford  <jrb@gnome.org>

	* accessibility-keyboard.desktop.in (Exec): s/gnome2/gnome

2002-03-30  Jody Goldberg <jody@gnome.org>

	* gnome-accessibility-keyboard-properties.glade2 : rename Sample -> Text
	  because that makes more sense.

	http://bugzilla.gnome.org/show_bug.cgi?id=76315
	* accessibility-keyboard.desktop.in : rename from AccessX -> Keyboard

2002-03-29  Jody Goldberg <jody@gnome.org>

	* accessibility-keyboard.c (setup_dialog) : spelling error.
	(CONFIG_ROOT) : fix spelling error in the schema.

2002-03-29  Jody Goldberg <jody@gnome.org>

	* accessibility-keyboard.c : tweak the mouse key slider ranges
	max_speed : 100 pixels every 10 msec is plenty fast  Limit things to
	    1..100 default 10 step 5
	accel_time : 10..5000 default 300 step 100
	init_delay : 10..5000 default 300 step 100

2002-03-28  jacob berkman  <jacob@ximian.com>

	* accessibility-keyboard.c: on solaris Xresource.h sez /* You must
	include <X11/Xlib.h> before including this file */

2002-03-25  Jody Goldberg <jody@gnome.org>
