@@ -1,3 +1,8 @@
+2002-06-18  Jody Goldberg <jody@gnome.org>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=85224
+	* applier.c (render_wallpaper) : clamp to avoid underflow
+
 2002-06-17  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.0.0
